# apue

./: .gitignore  README.md  make.h  unpenv
lib/: Makefile  libenv  make.h
lib/inc/: libunp.h
lib/src/: liberr.c  librw.c  libsock.c  libunp.c  wrappthread.c  wrapsock.c  wrapstdio.c  wrapunix.c
pipe/: Makefile  client.c  mainpipe  mainpipe.c  server.c
tcp/: .gitignore
tcp/echo/: Makefile  echoenv  make.h
tcp/echo/client/: Makefile  echoc.c  echoc.h
tcp/echo/server/: Makefile  echos.c  echos.h
thread/affinity/: CMakeLists.txt  rlt.1.1  rlt.1.2  rlt.2.1  rlt.2.2  test.sh  test_1_1.sh  test_1_1024.sh  test_1_128.sh  test_2_1.sh  test_2_128.sh  test_4_1.sh  test_4_1024.sh  total.sh
thread/affinity/include/: arith.h
thread/affinity/src/: main.cpp
thread/mutex/: Makefile  mthread.c  mutex  mutex_test.c  mutex_test.h
udp/: .gitignore
udp/echo/: Makefile  echoenv  make.h
udp/echo/client/: Makefile  echoc.c  echoc.h
udp/echo/server/: Makefile  echos.c  echos.h
